# dwm-statusbar

./: Cargo.toml  README.md
src/: blocks.rs  lib.rs  main.rs
