[package]
name = "dwm-statusbar"
version = "0.1.1"
edition = "2021"

license = "GPL-3.0-only"
description = "Simple and fast modular status bar for dwm written in rust."
authors = ["thatmagicalcat <thatmagicalcat@duck.com"]
repository = "https://github.com/thatmagicalcat/dwm-statusbar"
readme = "README.md"
